Semi-Fix overflow on testimonials and carousel

--- a/src/pages/styles/students.module.scss
+++ b/src/pages/styles/students.module.scss
@@ -53,11 +53,14 @@
 
 .stats {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     text-align: center;
     margin-top: 3vh;
+    margin-bottom: 3vh;
     &>div {
         margin: 40px;
+        margin-bottom: 0px;
         padding: 40px;
         width: 25vh;
         border-radius: 30px;
@@ -94,9 +97,8 @@
 
 .sectionThree {
     background-color: var(--primary);
-    margin: 0 50px;
-    width: calc(100% - 2*max(40px, calc(10vw + 10px)) - 100px);
-    margin-bottom: 50px;
+    margin: 0 5vw;
+    margin-bottom: 75px;
     border-radius: 30px;
     &>.slider {
         width: 100%;
@@ -114,6 +116,8 @@
 
 .testimonial {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 60px 0;
     align-items: center;
     &>.photo {
@@ -121,11 +125,12 @@
         background-size: contain;
         min-width: 150px;
         max-width: 150px;
-        margin: 0 15px;
+        margin: 0 15px 15px;
     }
 
     &>.description {
         display: flex;
+        max-width: 70%;
         flex-direction: column;
         margin: 0 15px;
         &>h3 {
@@ -144,15 +149,17 @@
 }
 
 .carouselTestimonial {
-    padding: 0 50px;
-    width: calc(100% - 100px);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
     &>.photo {
         border-radius: 50%;
         background-size: contain;
         min-width: max(200px, 10vw);
         min-height: max(200px, 10vw);
         flex-basis: math.div(100,4)*1%;
-        margin: 0 15px;
+        margin: 0 15px 15px;
     }
     &>.description {
         letter-spacing: 1px;
